--- a/src/public/style.css
+++ b/src/public/style.css
@@ -57,29 +57,22 @@ div.left{
     bottom: 5%;
     align-content: center;
     text-align: center;
-    display: flex;
-    justify-content: space-between;
-    gap: 40px;
     width: 100%;
 }
 
-.previoussong,
-.nextsong {
-    flex: 1;
+.previoussong {
     text-align: center;
     font-size: 20px;
     color: #888;
     opacity: 0.8;
 }
 
-.previoussong h4,
-.nextsong h4 {
+.previoussong h4 {
     margin: 5px 0;
     font-weight: normal;
 }
 
-.previoussong h3,
-.nextsong h3 {
+.previoussong h3 {
     margin-bottom: 10px;
     font-size: 14px;
     font-weight: bold;
